pom.xml jvm flag updates for kryo serialization reflection stuffs and whatnots.